fix bugs UI jira and dark mode popup unstake all

--- a/src/styles/menus.css
+++ b/src/styles/menus.css
@@ -307,6 +307,43 @@
   background: #282A34;
 }
 
+
+.darkMode .button-11 .layer {
+  background: #171717;
+}
+
+.darkMode .button-11 .knobs:before {
+  background: #252525;
+}
+
+.darkMode .button-11 .knobs:after{
+  color: rgba(255, 255, 255, 0.46);
+}
+
+.darkMode .button-11 .knobs:before{
+  color: rgba(255, 255, 255, 0.46);
+}
+
+.darkMode .button-11 .checkbox:checked+.knobs span{
+  color: rgba(255, 255, 255, 0.46);
+}
+
+.darkMode .button-11 .checkbox:checked+.knobs:after {
+  color: #fff;
+}
+
+.darkMode .button-11 .knobs span {
+  color: #fff;
+}
+
+.darkMode .button-11 .checkbox:checked~.layer {
+  background-color: #171717;
+}
+
+.darkMode .button-11 .checkbox:checked+.knobs:before {
+  background: #252525;
+}
+
 @media(max-width: 600px) {
   .showDesktop {
     display: none;
